# TIPS-HE-MPC-Clustering

./: .gitignore  CMakeLists.txt  DEVELOPER.md  DOCUMENTATION_SUMMARY.md  Dockerfile  Doxyfile  EXPERIMENTATION_GUIDE.md  FILE_DESCRIPTIONS.md  README.md  config.yaml  convert_threat_data.py  generate_million_threat_data.py  generate_test_threat_data.py  mpc_worker.py  threat_stix.json
archive/: REPOSITORY_STRUCTURE.md  summary.md
archive/old-he/: README.md  benchmark.cpp  data-ingestion.cpp  scheme-selection.cpp
config/: config.yaml
datasets/: README.md
doc/html/: deprecated.html  dir_1981f7b584ee04aae06c4f5e2255c087.js  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_84563487bdb30479a2ae2755efa52b7b.html  dir_84563487bdb30479a2ae2755efa52b7b.js  dir_869be82bf71bd4deaadeeb61badb78d9.html  dir_869be82bf71bd4deaadeeb61badb78d9.js  dir_94f680acc139baaf1046f4b181e342e7.html  dir_94f680acc139baaf1046f4b181e342e7.js  dir_febd3575aad83486e631d8a9220fb547.js  globals_func.html  he__kmeans_8cpp.js  he__kmeans__prototype_2src_2he__hybrid__kmeans_8cpp.html  main1_8cpp.html  main__openfhe_8cpp.html  namespaceapi.html  namespaces_dup.js  namespacevalidate.html  navtreedata.js  old-he_2benchmark_8cpp.html  old-he_2clustering_8cpp.html  old-he_2encryption_8cpp.html  old-he_2encryption_8cpp.js  old-he_2mpc__interface_8cpp.html  old-he_2scheme-selection_8cpp.html  pages.html  src_2benchmark_8cpp.html  src_2benchmark_8cpp.js  src_2clustering_8cpp.html  src_2data-ingestion_8cpp.js  src_2main_8cpp.html  (+1 more)
he_hybrid_package/: CMakeLists.txt  README.md
he_hybrid_package/src/: he_hybrid_kmeans.cpp
he_kmeans_prototype/: CMakeLists.txt  README.md
he_kmeans_prototype/data/: labels.csv
he_kmeans_prototype/results/: build_he_hybrid_kmeans.txt  cmake_config.txt  env.txt  he_hybrid_centroids.csv  he_hybrid_pred_labels.csv  metrics.csv  predlabels.csv
he_kmeans_prototype/scripts/: run_he_hybrid.sh
he_kmeans_prototype/src/: he_hybrid_kmeans.cpp  main.cpp  main1.cpp
k8s/: README.md  mpc-worker-deployment.yaml
old-he/: api.py  app.py  clustering.cpp  encryption.cpp  main.cpp  mpc_interface.cpp  threat_data.csv
results/: centroids.csv  cluster_summary.txt  experiment_example.txt  metrics.csv  stix_vectors.csv  summary.txt  table6.4  table6.4.csv  threat_dataset.csv  threat_dataset_100k.csv
scripts/: validate.py
src/: CMakeLists.txt  benchmark.cpp  clustering.cpp  data-ingestion.cpp  encryption.cpp  he_kmeans.cpp  main.cpp  main_openfhe.cpp  mpc_interface.cpp  scheme-selection.cpp
(+76 files in other folders)
